Ensure content is visible to assistive technologies

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -102,12 +102,3 @@ footer {
         }
     }
 }
-
-.hidden {
-    position: absolute;
-    left: -500px;
-    top: 0;
-    width: 1;
-    height: 1;
-    overflow: hidden;
-}
