--- a/scss/pages/_students.scss
+++ b/scss/pages/_students.scss
@@ -313,7 +313,8 @@ p {
             }
         }
         input[type=checkbox] {
-            visibility: hidden;
+            @extend %hidden;
+
             &:checked+label::after {
                 filter: alpha(enabled=false);
                 opacity: 1;
